created docker file for the app

--- a/note-app/src/main/resources/application.properties
+++ b/note-app/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.application.name=note-app
 spring.data.mongodb.uri=mongodb+srv://mohdijazak:ampoIRHPVo9wDagv@cluster0.p115knn.mongodb.net/Note
 spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
-#note.uploadDir=C:/Users/ijaz/Learnings/note-app/uploads/
+
+#minio.endpoint=http://localhost:9000
+minio.access.key=mykey
+minio.secret.key=mysecret
